force-app/main/default/objects/CaseItem__c/CaseItem__c.object-meta.xml
<CustomObject>
    <description>Objet permettant de définir les actions sur un produit suite à une requête SAV</description>
    <label>Élément de requête</label>
    <nameField>
        <displayFormat>CSI/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Éléments de requête</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>