force-app/main/default/objects/CaseItem__c/fields/assetComponent__c.field-meta.xml
<CustomField>
    <fullName>assetComponent__c</fullName>
    <formula>TEXT(productOption__r.assetComponent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Composant</label>
    <type>Text</type>
</CustomField>