force-app/main/default/objects/CaseItem__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Éléments de requête</relationshipLabel>
    <relationshipName>caseLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>