force-app/main/default/objects/CaseItem__c/fields/interventionDuration__c.field-meta.xml
<CustomField>
    <fullName>interventionDuration__c</fullName>
    <inlineHelpText>Durée exprimée en minutes</inlineHelpText>
    <label>Durée d&apos;intervention</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>