force-app/main/default/objects/CaseItem__c/fields/isOutOfWarranty__c.field-meta.xml
<CustomField>
    <fullName>isOutOfWarranty__c</fullName>
    <description>Le SAV est payant si le type de la requête est égal à &quot;SAV hors garantie&quot;</description>
    <formula>ISPICKVAL( case__r.Type, &quot;SAV hors garantie&quot; )</formula>
    <label>[#] SAV hors garantie</label>
    <type>Checkbox</type>
</CustomField>