force-app/main/default/objects/CaseItem__c/fields/productCode__c.field-meta.xml
<CustomField>
    <fullName>productCode__c</fullName>
    <formula>productOption__r.SBQQ__ProductCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code du produit</label>
    <type>Text</type>
</CustomField>