force-app/main/default/objects/CaseItem__c/fields/productName__c.field-meta.xml
<CustomField>
    <fullName>productName__c</fullName>
    <formula>productOption__r.SBQQ__ProductName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du produit</label>
    <type>Text</type>
</CustomField>