force-app/main/default/objects/CaseItem__c/fields/productOption__c.field-meta.xml
<CustomField>
    <fullName>productOption__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Produit</label>
    <referenceTo>SBQQ__ProductOption__c</referenceTo>
    <relationshipLabel>Éléments de requête</relationshipLabel>
    <relationshipName>CaseItems</relationshipName>
    <type>Lookup</type>
</CustomField>