force-app/main/default/objects/CaseItem__c/validationRules/VR_K3_CaseItem_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CaseItem_Case</fullName>
    <active>true</active>
    <description>La requête reliée à l&apos;élément de requête doit être une requête NCP/Interne.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(case__r.RecordType.DeveloperName!=&apos;InternalProductNonCompliance&apos;)</errorConditionFormula>
    <errorDisplayField>case__c</errorDisplayField>
    <errorMessage>Requête invalide (doit être une requête NCP/Interne)!</errorMessage>
</ValidationRule>