force-app/main/default/objects/CaseItem__c/validationRules/VR_K3_CaseItem_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CaseItem_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
interventionDuration__c != null &amp;&amp;
interventionDuration__c &lt; 0</errorConditionFormula>
    <errorDisplayField>interventionDuration__c</errorDisplayField>
    <errorMessage>Durée d&apos;intervention invalide (doit être supérieure ou égale à 0)!</errorMessage>
</ValidationRule>