force-app/main/default/objects/CaseItem__c/validationRules/VR_K3_CaseItem_ProductOption.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CaseItem_ProductOption</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISNULL(case__r.ProductId)) &amp;&amp;
productOption__r.SBQQ__ConfiguredSKU__r.Matiere__c != case__r.Product.Matiere__c &amp;&amp;
productOption__r.SBQQ__ConfiguredSKU__r.SousFamille__c != case__r.Product.SousFamille__c &amp;&amp;
productOption__r.SBQQ__ConfiguredSKU__r.generic__c != true</errorConditionFormula>
    <errorDisplayField>productOption__c</errorDisplayField>
    <errorMessage>Elément de requête invalide (Produit associé ne correspondant pas au produit de la non-conformité produit)!</errorMessage>
</ValidationRule>