force-app/main/default/objects/CaseItem__c/validationRules/VR_K3_CaseItem_ProductOption_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CaseItem_ProductOption_Required</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
ISBLANK(productOption__c)</errorConditionFormula>
    <errorDisplayField>productOption__c</errorDisplayField>
    <errorMessage>Produit obligatoire!</errorMessage>
</ValidationRule>