force-app/main/default/objects/CaseItem__c/validationRules/VR_K3_CaseItem_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CaseItem_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(quantity__c = null || quantity__c &lt; 1)</errorConditionFormula>
    <errorDisplayField>quantity__c</errorDisplayField>
    <errorMessage>Quantité invalide (obligatoire et doit être supérieure ou égale à 1)!</errorMessage>
</ValidationRule>