force-app/main/default/objects/CaseItem__c/validationRules/VR_K3_CaseItem_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CaseItem_Unit</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
!ISPICKVAL(productOption__r.unit__c, &apos;&apos;) &amp;&amp;
TEXT(unit__c) != TEXT(productOption__r.unit__c)</errorConditionFormula>
    <errorDisplayField>unit__c</errorDisplayField>
    <errorMessage>Unité invalide (doit être égale à l&apos;unité configurée sur le produit)!</errorMessage>
</ValidationRule>